--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,192 @@
+alabaster==0.7.12
+appdirs==1.4.4
+apt-xapian-index==0.47
+apturl==0.5.2
 asgiref==3.3.1
+asn1crypto==0.24.0
+astor==0.8.1
+astroid==2.4.2
+attrs==20.2.0
+autoflake==1.4
 autopep8==1.5.5
+Babel==2.8.0
+bandit==1.6.2
+beautifulsoup4==4.9.3
+black==20.8b1
+bleach==3.2.1
+Brlapi==0.6.6
+certifi==2020.12.5
+cffi==1.14.4
+chardet==4.0.0
+click==7.1.2
+cloudinary==1.24.0
+command-not-found==0.3
+coverage==5.3
+cryptography==3.3.1
+cupshelpers==1.0
+darglint==1.5.5
+dataclasses==0.7
+defer==1.0.6
+defusedxml==0.6.0
+distlib==0.3.1
+distro-info===0.18ubuntu0.18.04.1
+dj-database-url==0.5.0
 Django==3.1.6
+django-allauth==0.44.0
+django-bleach==0.6.1
+django-ckeditor==6.0.0
+django-cloudinary-storage==0.3.0
+django-cors-headers==3.7.0
+django-heroku==0.3.1
+django-js-asset==1.2.2
+django-recaptcha==2.0.6
 djangorestframework==3.12.2
+doc8==0.8.1
+docopt==0.6.2
+docutils==0.16
+eradicate==1.0
+filelock==3.0.12
+flake8==3.8.4
+flake8-2020==1.6.0
+flake8-bandit==2.1.2
+flake8-broken-line==0.2.1
+flake8-bugbear==19.8.0
+flake8-builtins==1.5.3
+flake8-commas==2.0.0
+flake8-comprehensions==3.3.0
+flake8-debugger==3.2.1
+flake8-docstrings==1.5.0
+flake8-eradicate==0.4.0
+flake8-fixme==1.1.1
+flake8-isort==3.0.1
+flake8-logging-format==0.6.0
+flake8-mutable==1.2.0
+flake8-polyfill==1.0.2
+flake8-quotes==2.1.2
+flake8-rst-docstrings==0.0.12
+flake8-string-format==0.2.3
+flake8-variables-names==0.0.3
+Flask==1.1.2
+gitdb==4.0.5
+GitPython==3.1.11
+greenlet==0.4.16
+gunicorn==20.0.4
+httplib2==0.11.3
+idna==2.10
+imagesize==1.2.0
+importlib-metadata==2.0.0
+importlib-resources==3.1.1
+iniconfig==1.1.1
+isort==5.6.4
+itsdangerous==1.1.0
+Jinja2==2.11.2
+keyring==10.6.0
+keyrings.alt==3.0
+language-selector==0.1
+launchpadlib==1.10.6
+lazr.restfulclient==0.13.5
+lazr.uri==1.0.3
+lazy-object-proxy==1.4.3
+louis==3.5.0
+lxml==4.6.2
+macaroonbakery==1.1.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
+msgpack==1.0.0
+mypy-extensions==0.4.3
+mysql-connector-python==8.0.22
+neovim==0.2.6
+neovim-remote==2.4.0
+netifaces==0.10.4
+oauth==1.0.1
+oauthlib==3.1.0
+olefile==0.45.1
+packaging==20.8
+pathspec==0.8.0
+pbr==5.5.1
+pep8-naming==0.9.1
+pexpect==4.2.1
+Pillow==8.0.1
+pluggy==0.13.1
+protobuf==3.0.0
+psutil==5.7.3
+psycopg2==2.8.6
+py==1.9.0
+pycairo==1.16.2
 pycodestyle==2.6.0
+pycparser==2.20
+pycrypto==2.6.1
+pycups==1.9.73
+pydocstyle==5.1.1
+pyflakes==2.2.0
+Pygments==2.7.2
+pygobject==3.26.1
+PyJWT==2.0.1
+pylint==2.6.0
+pymacaroons==0.13.0
+PyNaCl==1.1.2
+pynvim==0.4.1
+pyparsing==2.4.7
+pyRFC3339==1.0
+pytest==6.1.1
+pytest-cov==2.10.1
+python-apt==1.6.5+ubuntu0.5
+python-dateutil==2.6.1
+python-debian==0.1.32
+python-decouple==3.4
+python-dev-tools==2020.9.10
+python-xlib==0.28
+python3-openid==3.2.0
 pytz==2021.1
+pyupgrade==2.7.3
+pyxattr==0.6.0
+pyxdg==0.25
+PyYAML==5.3.1
+ranger-fm==1.9.3
+regex==2020.10.23
+reportlab==3.4.0
+requests==2.25.1
+requests-oauthlib==1.3.0
+requests-unixsocket==0.1.5
+restructuredtext-lint==1.3.1
+screen-resolution-extra==0.0.0
+SecretStorage==2.3.1
+simplejson==3.13.2
+six==1.15.0
+smmap==3.0.4
+snowballstemmer==2.0.0
+soupsieve==2.1
+Sphinx==2.4.4
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
 sqlparse==0.4.1
+stevedore==3.2.2
+system-service==0.3
+systemd-python==234
+testfixtures==6.15.0
+tokenize-rt==4.0.0
 toml==0.10.2
+tox==3.20.1
+tox-travis==0.12
+typed-ast==1.4.1
+typing-extensions==3.7.4.3
+ubuntu-drivers-common==0.0.0
+ueberzug==18.1.6
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.26.2
+virtualenv==20.0.35
+wadllib==1.3.2
+webencodings==0.5.1
+wemake-python-styleguide==0.14.1
+Werkzeug==1.0.1
+whitenoise==5.2.0
+wrapt==1.12.1
+xkit==0.0.0
+youtube-dl==2018.3.14
+zipp==3.3.2
+zope.interface==4.3.2
