--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
+    "dotenv": "^8.2.0",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.1",
     "react": "^17.0.1",
